# Project-Kasir-Online

./: CMakeLists.txt  main.cpp  vcpkg_rf.txt
